<resources>
    <string name="app_name">云信</string>
    <string name="app_version">V 1.0</string>
    <string name="login">登陆</string>
    <string name="have_account_login">已有账号?立即登录</string>
    <string name="register_tip">没有账号?立即注册</string>
    <string name="register">注册</string>
    <string name="confirm">确定</string>
    <string name="location">位置</string>
    <string name="camera_tip">轻触拍照，长按录像</string>
    <string name="add_friend">添加朋友</string>
    <string name="msg_notify">验证提醒</string>
    <string name="request_friend_hint">请填写好友请求附言</string>
    <string name="send_request">发送请求</string>
    <string name="group_chat">群聊</string>
    <string name="around_person">附近人</string>
    <string name="tip_show_loc">[位置]</string>
    <string name="we_share">动态</string>
    <string name="setting">设置</string>
    <string name="test_time">08:00</string>
    <string name="have_agree">已同意</string>
    <string name="do_agree">同意</string>
    <string name="do_refuse">拒绝</string>
    <string name="press_record">按住 说话</string>
    <string name="text_send">发送</string>
    <string name="test_msg">啦啦啦啦啦啦啦啦啦啦啦绿绿啦啦啦啦啦啦绿绿啦啦啦啦啦啦啦</string>
    <string name="account_tip">帐号：</string>
    <string name="nike_tip">昵称：</string>
    <string name="add_to_contract">添加到通讯录</string>
    <string name="send_message">发送消息</string>
    <string name="video_chat">视频聊天</string>
    <string name="set_remark_info">设置备注信息</string>
    <string name="please_input_account">请输入账号</string>
    <string name="account_head_picture">头像</string>
    <string name="account_nick">昵称</string>
    <string name="account_account">瑾信号</string>
    <string name="account_sex">性别</string>
    <string name="account_birth">生日</string>
    <string name="account_location">地区</string>
    <string name="account_signature">签名</string>
    <string name="signature_hint">这个人很懒，什么都没留下~</string>
    <string name="dialog_take_photo">拍照</string>
    <string name="dialog_select_photo">从相册中选择</string>
    <string name="digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="show_location">[点击查看地图]</string>
    <string name="tv_image">图片</string>
    <string name="tv_camera">相机</string>
    <string name="tv_location">位置</string>
    <string name="tv_video_chat">视频聊天</string>
    <string name="tv_red_packet">红包</string>
    <string name="tv_tip_msg">提示消息</string>
</resources>
