<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <include layout="@layout/title_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/interval_color">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@color/white_color">

            <com.joooonho.SelectableRoundedImageView
                android:id="@+id/iv_head_picture"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                app:sriv_oval="true"
                android:scaleType="fitXY" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/iv_head_picture"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_remark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="16sp"
                    android:textColor="@color/app_black_color"/>

                <ImageView
                    android:id="@+id/iv_person_sex"
                    android:layout_toRightOf="@+id/tv_remark"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/ic_man"/>

                <TextView
                    android:id="@+id/tv_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_remark"
                    android:layout_marginTop="10dp"
                    android:text="@string/account_tip"
                    android:textSize="16sp"
                    android:textColor="@color/app_black_color"/>

                <TextView
                    android:id="@+id/tv_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_remark"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/tv_tip"
                    android:text="Ezreal-520"
                    android:textSize="16sp"
                    android:textColor="@color/app_black_color"/>

                <TextView
                    android:id="@+id/tv_tip_nike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_tip"
                    android:layout_marginTop="10dp"
                    android:text="@string/nike_tip"
                    android:textSize="16sp"
                    android:textColor="@color/app_black_color"/>

                <TextView
                    android:id="@+id/tv_nike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_account"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:layout_toRightOf="@+id/tv_tip_nike"
                    android:text="Fate"
                    android:textColor="@color/app_black_color"/>
            </RelativeLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:id="@+id/tv_set_remark"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white_color"
            android:textColor="@color/app_black_color"
            android:text="@string/set_remark_info"
            android:visibility="visible"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

        <TextView
            android:id="@+id/tv_start_chat"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/app_blue_color"
            android:textColor="@color/white_color"
            android:text="@string/send_message"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_video_chat"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white_color"
            android:textColor="@color/app_blue_color"
            android:text="@string/video_chat"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_add_to_contract"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/app_blue_color"
            android:textColor="@color/white_color"
            android:text="@string/add_to_contract"/>

    </LinearLayout>


</LinearLayout>