<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white_color"
    android:layout_height="61dp"
    android:gravity="center_vertical">

    <LinearLayout
        android:id="@+id/layout_recent_contact"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <com.joooonho.SelectableRoundedImageView
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:id="@+id/iv_head_picture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitXY"
            app:sriv_oval="true"/>

        <LinearLayout
            android:id="@+id/msg_detail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_recent_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textColor="@color/app_black_color"/>

            <TextView
                android:id="@+id/tv_recent_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:text="@string/test_msg"
                android:textColor="@color/default_text_color"/>
        </LinearLayout>


        <TextView
            android:id="@+id/tv_recent_time"
            android:layout_marginLeft="5dp"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/test_time"
            android:textColor="@color/default_text_color"
            android:visibility="visible"/>

    </LinearLayout>

    <View
        android:layout_marginTop="5dp"
        android:layout_below="@+id/layout_notify"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="@color/interval_color"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>