<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white_color"
    android:layout_height="wrap_content"
    android:gravity="center_vertical">

    <LinearLayout
        android:id="@+id/layout_notify"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

    <com.joooonho.SelectableRoundedImageView
        android:padding="5dp"
        android:id="@+id/iv_head_picture"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:sriv_oval="true"/>

    <LinearLayout
        android:id="@+id/msg_detail"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColor="@color/app_black_color"/>

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:textColor="@color/default_text_color"/>
    </LinearLayout>


    <TextView
        android:id="@+id/tv_do_agree"
        android:layout_marginLeft="5dp"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:background="@drawable/tv_btn_round_green"
        android:text="@string/do_agree"
        android:textColor="@color/app_green_color"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/tv_do_refuse"
        android:layout_marginLeft="10dp"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:background="@drawable/tv_btn_round_red"
        android:gravity="center"
        android:text="@string/do_refuse"
        android:textColor="@color/app_red_color"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:text="@string/have_agree"
        android:visibility="gone"
        android:textColor="@color/app_black_color"/>
    </LinearLayout>

    <View
        android:layout_marginTop="5dp"
        android:layout_below="@+id/layout_notify"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="@color/interval_color"/>
</RelativeLayout>